--- a/slidedowndemo.html
+++ b/slidedowndemo.html
@@ -270,7 +270,7 @@ test<br>test<br>test<br>test<br>test<br>test<br>test<br>test<br>test<br>test<br>
 </div>
 
 
-test<br>test<br>test<br>test<br>test<br>test<br>test<br>test<br>test<br>test<br>test<br>test<br>test<br>
+test<br>test<br>test<br>test<br>test<br>test<br>test<br>test<br>test<br>test<br>
 
 </body>
 
